--- a/index.html
+++ b/index.html
@@ -13,19 +13,12 @@
         <h1>Select 1-50 for Happy dog time!</h1>
 
         <form id="dogs">
-          <label for="dogs">Dogs:</label><br>
-          <input type="text" id="dogs" name="dogs" defaultValue="3"><br>
+          <label for="breed">Dogs:</label><br>
+          <input type="text" id="breed" name="breed"><br>
           <input type="submit" value="Get a dog pic!">
         </form>
           <div class="dogs"></div>
-        <section>
-          <form id="breed">
-            <label for="breed">Breed:</label><br>
-            <input type="text" id="breed" name="breed" defaultValue="chihuahua"><br>
-            <input type="submit" value="Get a specific breed!">
-          </form>
-            <div class="dog"></div>
-          </section>
+      
         <section class="results hidden">
           <h2>Look at these dogs!</h2>
           
